add start with windows

--- a/www/pathway.html
+++ b/www/pathway.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Tables</title>
+    <title>Dashboard pathway</title>
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -164,7 +164,7 @@
 
                     <!-- DataTales Example -->
 
-                                {{contribut}}
+                                {{commcellcell}}
                                 <hr>
                                 The contribution of each ligand-receptor pair to the chosen signaling pathway is calculated here
 
