--- a/www/index.html
+++ b/www/index.html
@@ -9,16 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Dashboard</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="www/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="www/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -140,11 +140,12 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Nb cell</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800"> {{nb_cell}} </div>
+                                                <h6>Nb cells</h6>
+                                            </div>
+                                            <div class="h6 mb-0 font-weight-bold text-gray-800"> {{nb_cell}} </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fa fa-bar-chart fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -158,11 +159,12 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                NB gene</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800"> {{nb_gene}} </div>
+                                                <h6>NB genes </h6>
+                                            </div>
+                                            <div class="h6 mb-0 font-weight-bold text-gray-800"> {{nb_gene}} </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fa fa-bar-chart fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -177,11 +179,12 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                NB cell type</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800"> {{nb_cellType}} </div>
+                                                <h6>NB cells types</h6>
+                                            </div>
+                                            <div class="h6 mb-0 font-weight-bold text-gray-800"> {{nb_cellType}} </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                            <i class="fa fa-bar-chart fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -201,7 +204,7 @@
                                         <div class="col mr-2">
                                             <div class="form-group shiny-input-container">
                                                 <label class="control-label" id="file1-label" for="file1">
-                                                    <h3>          </h3> 
+                                                    <h6>          </h6> 
                                                 </label>
                                                 <div class="input-group">
                                                   <label class="input-group-btn input-group-prepend">
