[minor] cleaning up  some line of code

--- a/www/pathway.html
+++ b/www/pathway.html
@@ -102,7 +102,7 @@
                     <span>networkCom pathway</span></a>
             </li>
             <!-- Nav Item - pathway -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./#!/pathway">
                     <i class="fas fa-fw fa-table"></i>
                     <span> pathway</span></a>
